Added Drawer Layout

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,4 +33,18 @@
             app:argType="integer" />
 
     </fragment>
+
+    <fragment
+        android:id="@+id/episodeListFragment"
+        android:name="com.example.rickmorty.EpisodeListFragment"
+        android:label="Rick And Morty Episodes "
+        tools:layout="@layout/fragment_episode_list">
+<!--        <action-->
+<!--            android:id="@+id/action_characterListFragment_to_characterDetailFragment"-->
+<!--            app:destination="@id/characterDetailFragment"-->
+<!--            app:enterAnim="@anim/slide_in_from_right"-->
+<!--            app:exitAnim="@anim/slide_out_to_left"-->
+<!--            app:popEnterAnim="@anim/slide_out_to_right"-->
+<!--            app:popExitAnim="@anim/slide_in_from_left" />-->
+    </fragment>
 </navigation>
